src/test/resources/testinput/parsable/symtab/invalid_coco/prepost11.ocl
/* (c) https://github.com/MontiCore/monticore */
ocl prepost11 {
  context void Person.changeCompany(String name)
  pre: company.name == name;
  post: company == company@pre && company.employees == company.employees@pre;
}
